@@ -19,7 +19,7 @@ Depends: adduser,
          python3-pkg-resources,
          python3-distutils-extra,
 	 owrx-connector (>= 0.6.5),
-	 python3-csdr (>= 0.18.35),
+	 python3-csdr (>= 0.18.36),
          ${python3:Depends},
          ${misc:Depends}
 Recommends: python3-digiham (>= 0.6),
