@@ -1,5 +1,6 @@
 openwebrx (1.2.91) bullseye jammy; urgency=low
 
+  * Added option to record silence in background recording.
   * Made bot protection scheme optional.
   * Fixed bookmarks getting snapped to nearest step.
   * Fixed waterfall theme resetting on page reload.
